--- a/style.css
+++ b/style.css
@@ -1,17 +1,23 @@
-.container{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    height:100vh;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
-.child{
-    border:1px solid black;
-    padding:20px 50px;
+.child {
+  border: 1px solid black;
+  padding: 20px 50px;
 }
-h1,h3{
-    color:black;
-    text-align: center;
+.flex {
+  display: flex;
+  justify-content: space-around;
+  gap: 20px;
 }
-button{
-    width: 100%;
+h1,
+h3 {
+  color: black;
+  text-align: center;
+}
+button {
+  width: 100%;
 }
